# information_retrieval

./: .gitignore
tp1/: document.txt  questao1.py  questao2.py  utils.py
tp2/: output_q1.txt  pyproject.toml
tp2/arquivos/: arquivo.txt  arquivo2.txt  arquivo3.txt
tp2/arquivos/musicas/: every_breath_you_take.txt  hungry_like_the_wolf.txt  i_know_theres_somethin_going_on.txt  lets_dance.txt  maneater.txt  maniac.txt  shame_on_the_moon.txt  she_works_hard_for_the_money.txt  total_eclipse_of_the_hear.txt  you_and_i.txt
tp2/src/: models.py  questao1.py  questao2.py  questao3.py  utils.py
tp3/arquivos/musicas/: baby_come_to_me.txt  come_on_eileen.txt  do_you_really_wanna_hurt_me.txt  never_gonna_let_you_go.txt  sweet_dreams.txt  twilight_zone.txt
tp3/src/: models.py  questao2.py  questao3.py  questao4.py  questao5.py  utils.py
tp4/: TP4 copy.ipynb  pyproject.toml  questao1.ipynb  questao5.ipynb
tp4/entregas/Ex1/: questao1.ipynb
tp4/entregas/Ex2/: questao2.ipynb
tp4/entregas/Ex3/: questao3.ipynb
tp4/entregas/Ex4/: questao5.ipynb
