[tool.poetry]
name = "tp1"
version = "0.1.0"
description = "Código para o trabalho prático 1 da disciplina GSI024/2022.2"
authors = ["Guilherme Rodovalho <guirodovalho10@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Unidecode = "^1.3.6"
ruff = "^0.0.259"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
