[tool.poetry]
name = "tp4"
version = "0.1.0"
description = ""
authors = ["Guilherme Rodovalho <guirodovalho10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.8.1"
pandas = "^2.0.2"
sklearn = "^0.0.post5"
scikit-learn = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
